--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="../app/scss/reset.css">
-    <link rel="stylesheet" href="../app/scss/services.css">
+    <link rel="stylesheet" href="./app/scss/reset.css">
+    <link rel="stylesheet" href="./app/scss/services.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;700&family=Ubuntu+Mono&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
     <div class="content-wrapper--primary">
 <header class="header">
     <div class="header_logo">
-       <a href="/app/index.html"><img class="header_logo_img" src="../app/image/logo.svg" alt="Hlegal logo"></a>  
+       <a href="/index.html"><img class="header_logo_img" src="./app/image/logo.svg" alt="Hlegal logo"></a>  
     </div>
     <div class="header_info">
         <div class="header_info_wrapper">
@@ -32,7 +32,7 @@
                 <span class="header_contacts_location">Kyiv, Mechnikova str, 14/1</span>
                 <a class="header_contacts_phone" href="tel:0800211927">0800 211 927</a>
                 <a class="header_contacts_social" href="https://www.facebook.com/" aria-label="Visit us on Facebook">
-                    <img class="header_contacts_social_icon" src="../app/image/icon/fb_icon_header.svg" alt="Facebook Icon">
+                    <img class="header_contacts_social_icon" src="./app/image/icon/fb_icon_header.svg" alt="Facebook Icon">
                 </a>
             </address>
         </div>
@@ -85,7 +85,7 @@
 <article class="services_item">
     <a class="services_item_link" href="/">
     <div  class="services_item_image">
-        <img src="../app/image/icon/icon3.svg" alt=""></div>
+        <img src="./app/image/icon/icon3.svg" alt=""></div>
         <h2 class="services_item_title">Structuring corporate relationships</h2>
         <p class="services_item_description">Instead of just providing legal services, we will hire a lawyer or 
             a whole team that will fit into the daily life of your company.</p>    
@@ -94,7 +94,7 @@
 <article class="services_item">
     <a class="services_item_link" href="/">
     <div  class="services_item_image">
-        <img src="../app/image/icon/icon4.svg" alt=""></div>
+        <img src="./app/image/icon/icon4.svg" alt=""></div>
         <h2 class="services_item_title">Building contractual relations</h2>
         <p class="services_item_description">Once a week, or week after month, you have your own lawyer by 
             your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs
@@ -104,7 +104,7 @@
 <article class="services_item">
     <a class="services_item_link" href="/">
     <div  class="services_item_image">
-        <img src="../app/image/icon/icon5.svg" alt=""></div>
+        <img src="./app/image/icon/icon5.svg" alt=""></div>
         <h2 class="services_item_title">Protection of business, intellectual property</h2>
         <p class="services_item_description">And all the other time he will work on new diverse projects, 
             so he will definitely not stop in professional development. One way or another,
@@ -114,7 +114,7 @@
 <article class="services_item">
     <a class="services_item_link" href="/">
     <div  class="services_item_image">
-        <img src="../app/image/icon/icon6.svg" alt=""></div>
+        <img src="./app/image/icon/icon6.svg" alt=""></div>
         <h2 class="services_item_title">Judicial representation</h2>
         <p class="services_item_description">Is it a small, medium-sized company or a market leader?
              Local business or multinational company? Do you have your own legal department or not?</p>
@@ -129,18 +129,18 @@
 <section class="partners">
     <h3 class="partners_title">They already trust us</h3>
 <div class="partners_image">
-<img class="partners_image_item" src="../app/image/item_1.png" alt="Hillel">
-<img class="partners_image_item" src="../app/image/item_2.png" alt="WannaBiz">
-<img class="partners_image_item" src="../app/image/item_3.png" alt="Tapgerine">
-<img class="partners_image_item" src="../app/image/item_4.png" alt="3DLook">
-<img class="partners_image_item" src="../app/image/item_5.png" alt="Orangear">
-<img class="partners_image_item" src="../app/image/item_6.png" alt="Adteligent">
-<img class="partners_image_item" src="../app/image/item_7.png" alt="Clickky">
-<img class="partners_image_item" src="../app/image/item_8.png" alt="Eco Leasing">
-<img class="partners_image_item" src="../app/image/item_9.png" alt="Infra Tek">
-<img class="partners_image_item" src="../app/image/item_10.png" alt="City Park">
-<img class="partners_image_item" src="../app/image/item_11.png" alt="Art-prant studic">
-<img class="partners_image_item" src="../app/image/item_12.png" alt="Ultimate card">
+<img class="partners_image_item" src="./app/image/item_1.png" alt="Hillel">
+<img class="partners_image_item" src="./app/image/item_2.png" alt="WannaBiz">
+<img class="partners_image_item" src="./app/image/item_3.png" alt="Tapgerine">
+<img class="partners_image_item" src="./app/image/item_4.png" alt="3DLook">
+<img class="partners_image_item" src="./app/image/item_5.png" alt="Orangear">
+<img class="partners_image_item" src="./app/image/item_6.png" alt="Adteligent">
+<img class="partners_image_item" src="./app/image/item_7.png" alt="Clickky">
+<img class="partners_image_item" src="./app/image/item_8.png" alt="Eco Leasing">
+<img class="partners_image_item" src="./app/image/item_9.png" alt="Infra Tek">
+<img class="partners_image_item" src="./app/image/item_10.png" alt="City Park">
+<img class="partners_image_item" src="./app/image/item_11.png" alt="Art-prant studic">
+<img class="partners_image_item" src="./app/image/item_12.png" alt="Ultimate card">
 </div>
 </section>
 </div>
@@ -154,7 +154,7 @@
       </span>
       <div class="footer_contacts_wrapper">
         <a href="/" class="footer_social">
-          <img src="../app/image/icon/fb_footer.svg" alt="Visit us on Facebook">
+          <img src="./app/image/icon/fb_footer.svg" alt="Visit us on Facebook">
         </a>
         <a href="tel:0800211927" class="footer_phone"> 0800 211 927</a>
         <a href="mailto:contact@forstudy.space" class="footer_email">contact@forstudy.space</a>
