--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class="header_contacts_location">Kyiv, Mechnikova str, 14/1</span>
                 <a class="header_contacts_phone" href="tel:0800211927">0800 211 927</a>
                 <a class="header_contacts_social" href="https://www.facebook.com/" aria-label="Visit us on Facebook">
-                    <img class="header_contacts_social_icon" src="../app/image/icon/fb_icon_header.svg" alt="Facebook Icon">
+                    <img class="header_contacts_social_icon" src="./app/image/icon/fb_icon_header.svg" alt="Facebook Icon">
                 </a>
             </address>
         </div>
