--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a class="header_nav_link" href="/">about us</a>
             </li>
             <li class="header_nav_item">
-                <a class="header_nav_link" href="/services.html">services</a>
+                <a class="header_nav_link" href="./services.html">services</a>
             </li>
             <li class="header_nav_item">
                 <a class="header_nav_link" href="/">team</a>
@@ -88,7 +88,7 @@
 </section>
 </div>
 <section class="services">
-        <a class="services_header_link" href="/services.html">
+        <a class="services_header_link" href="./services.html">
              <h2>
                 SERVICES
             </h2>
