--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     <div class="content-wrapper--primary">
 <header class="header">
     <div class="header_logo">
-       <a href="/index.html"><img class="header_logo_img" src="./app/image/logo.svg" alt="Hlegal logo"></a>  
+       <a href="./index.html"><img class="header_logo_img" src="./app/image/logo.svg" alt="Hlegal logo"></a>  
     </div>
     <div class="header_info">
         <div class="header_info_wrapper">
